// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseButton renders correctly 1`] = `
.c0 {
  position: absolute;
  top: 8px;
  right: 8px;
}

<div
  class="c0"
/>
`;

exports[`Logo renders correctly 1`] = `
.c0 {
  max-width: 100%;
  max-height: 100%;
  margin: auto;
}

<img
  class="c0"
/>
`;

exports[`LogoWrapper renders correctly 1`] = `
.c0 {
  border: 2px solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100px;
  width: 150px;
}

<div
  class="c0"
/>
`;

exports[`MoreInfoHeader renders correctly 1`] = `
.c0 {
  padding: 16px;
  border-bottom: 2px solid;
}

.c1 {
  position: absolute;
  top: 8px;
  right: 8px;
}

<div
  class="c0"
>
  <div
    class="MuiGrid-container-1 MuiGrid-spacing-xs-32-26"
  >
    <div
      class="MuiGrid-item-2"
    >
      <div
        class="MuiGrid-container-1"
      >
        <div
          class="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
        >
          <h4
            class="MuiTypography-root-98 MuiTypography-h4-113"
          >
            Landbay
          </h4>
        </div>
        <div
          class="MuiGrid-item-2 MuiGrid-grid-xs-12-41"
        >
          <h6
            class="MuiTypography-root-98 MuiTypography-subtitle1-116"
          >
            Landbay - Buy To Let Wizards
          </h6>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <button
      aria-label="Close"
      class="MuiButtonBase-root-140 MuiIconButton-root-134"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label-139"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-143"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Wrapper renders correctly 1`] = `
.c0 {
  padding: 16px;
  border-bottom: 2px solid;
}

<div
  class="c0"
/>
`;
